--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Clase2</string>
     <string name="title_activity_the_game_actitvity">TheGameActitvity</string>
+    <string name="title_activity_my_game">MyGameActivity</string>
 </resources>
